--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -11,7 +11,7 @@ ext.mainProject = "LibWrapper"
  * 当前开发中，涉及到修改的工程（仅填写直接修改的即可，依赖他的会自动添加），多个用 "," 分隔。
  * 当前如果全量填"LibAndroid,LibThread,LibCommonUtils,LibCommonUIUtils,LibRequest,LibSqlite"
  */
-ext.developModule = "LibWrapper"
+ext.developModule = "LibLog"
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
  *  true 全都加载，
