--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ buildscript {
         classpath "com.bihe0832.android:GradleDependenciesCheck:1.1.0"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.50"
         classpath 'com.novoda:bintray-release:0.9.1'
+
     }
 }
 
@@ -73,6 +74,12 @@ subprojects {
             delete "build"
             delete ".externalNativeBuild"
         }
+
+        subproject.getTasks().create("copyAAR", Copy.class, {
+            from 'build/outputs/aar/' + module.name + '-release.aar'
+            into "./../libs/"
+        })
+        subproject.getTasks().getByName('copyAAR').dependsOn("assembleRelease")
 //        subproject.getTasks().getByName('bintrayUpload').dependsOn("build")
     }
 }
