--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -6,7 +6,7 @@ def project = ext
  * 当前开发中，最终运行的主工程，多个用 "," 分隔
  * 当前如果全量填"APPTest"
  */
-ext.mainProject = "APPTest"
+ext.mainProject = "RouterCompiler"
 /**
  * 当前开发中，涉及到修改的工程（仅填写直接修改的即可，依赖他的会自动添加），多个用 "," 分隔。
  * 当前如果全量填"LibAndroid,LibThread,LibCommonUtils,LibCommonUIUtils,LibRequest,LibSqlite"
@@ -21,7 +21,7 @@ ext.includeALLDependOnDevelopModule = false
 /**
  * 组件所有模块的最新版本，下次发布时使用
  */
-ext.moduleVersionName = "2.0.15"
+ext.moduleVersionName = "2.0.14"
 /************************************ 组件化开发常用配置 ************************************/
 
 ext.moduleInfo = [
@@ -37,7 +37,7 @@ ext.moduleInfo = [
                 "dependenciesList": []
         ],
         "RouterCompiler"            : [
-                "version"         : "2.0.13",
+                "version"         : "2.0.14",
                 "artifactId"      : "lib-router-compiler",
                 "dependenciesList": [
                         'com.squareup:javapoet:1.8.0',
