--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -6,12 +6,12 @@ def project = ext
  * 当前开发中，最终运行的主工程，多个用 "," 分隔
  * 当前如果全量填"APPTest"
  */
-ext.mainProject = "LibNotification"
+ext.mainProject = "LibUIUtils"
 /**
  * 当前开发中，涉及到修改的工程（仅填写直接修改的即可，依赖他的会自动添加），多个用 "," 分隔。
  * 当前如果全量填"LibAndroid,LibThread,LibCommonUtils,LibCommonUIUtils,LibRequest,LibSqlite"
  */
-ext.developModule = "LibNotification"
+ext.developModule = "LibUIUtils"
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
  *  true 全都加载，
@@ -225,7 +225,7 @@ ext.moduleInfo = [
                 "dependenciesList": ["LibDialog", "LibAPK", "LibCommonUtils"]
         ],
         "LibUIUtils"                : [
-                "version"         : "2.0.5",
+                "version"         : "2.0.16",
                 "artifactId"      : "lib-uiutils",
                 "dependenciesList": [
                         "LibCommonUIUtils", "LibFragmentation_swipeback", "LibFlycoTabLayout", "LibQRCode",
