--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -6,7 +6,7 @@ def project = ext
  * 当前开发中，最终运行的主工程，多个用 "," 分隔
  * 当前如果全量填"APPTest"
  */
-ext.mainProject = "APPTest"
+ext.mainProject = "LibImage"
 /**
  * 当前开发中，涉及到修改的工程（仅填写直接修改的即可，依赖他的会自动添加），多个用 "," 分隔。
  * 当前如果全量填"LibAndroid,LibThread,LibCommonUtils,LibCommonUIUtils,LibRequest,LibSqlite"
@@ -206,7 +206,7 @@ ext.moduleInfo = [
                 "dependenciesList": ["LibFile", "LibThread"]
         ],
         "LibImage"                  : [
-                "version"         : "2.0.5",
+                "version"         : "2.0.17",
                 "artifactId"      : "lib-image",
                 "dependenciesList": [
                         "com.github.bumptech.glide:glide:${project.glide_version}",
